fixed project title alignment

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,7 @@ main {
     color: var(--color-text);
     font-size: 2rem;
     font-weight: bolder;
+    text-align: center;
 }
 
 .project-container {
